# pinch

./: Cargo.toml  README.md
example_apps/complex/: inapinch.toml
example_apps/complex/data/: message.json
example_apps/complex/pages/: index.md.mustache
src/: lib.rs  plugins.rs  utils.rs
src/plugins/: assets.rs  data.rs  handlebars.rs  markdown.rs
